--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.13",
     "@mui/styled-engine-sc": "^5.11.11",
+    "@mui/styles": "^5.11.13",
+    "@mui/system": "^5.11.13",
     "@mui/x-data-grid": "^6.0.1",
     "@mui/x-data-grid-generator": "^6.0.1",
     "formik": "^2.2.9",
